// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`close-icon prop 1`] = `
<div class="van-image-preview" name="van-fade"><i role="button" class="van-icon van-icon-close van-image-preview__close-icon van-image-preview__close-icon--top-right">
    <!----></i>
  <div class="van-swipe van-image-preview__swipe">
    <div class="van-swipe__track" style="width: 0px; transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
  <div class="van-image-preview__index">1 / 0</div>
</div>
`;

exports[`close-icon-position prop 1`] = `
<div class="van-image-preview" name="van-fade"><i role="button" class="van-icon van-icon-close van-image-preview__close-icon van-image-preview__close-icon--top-left">
    <!----></i>
  <div class="van-swipe van-image-preview__swipe">
    <div class="van-swipe__track" style="width: 0px; transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
  <div class="van-image-preview__index">1 / 0</div>
</div>
`;

exports[`cover slot 1`] = `
<div class="van-image-preview" name="van-fade">
  <div class="van-swipe van-image-preview__swipe">
    <div class="van-swipe__track" style="width: 0px; transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
  <div class="van-image-preview__index">1 / 0</div>
  <div class="van-image-preview__cover">Custom Cover Content</div>
</div>
`;

exports[`index slot 1`] = `
<div class="van-image-preview" name="van-fade">
  <div class="van-swipe van-image-preview__swipe">
    <div class="van-swipe__track" style="width: 0px; transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
  <div class="van-image-preview__index">Custom Index</div>
</div>
`;

exports[`render image 1`] = `
<div class="van-image-preview" name="van-fade">
  <div class="van-swipe van-image-preview__swipe">
    <div class="van-swipe__track" style="width: 0px; transition-duration: 500ms; transform: translateX(0px);">
      <div class="van-swipe-item van-image-preview__swipe-item" style="width: 0px;"></div>
      <div class="van-swipe-item van-image-preview__swipe-item" style="width: 0px;"></div>
      <div class="van-swipe-item van-image-preview__swipe-item" style="width: 0px;"></div>
    </div>
  </div>
  <div class="van-image-preview__index">1 / 3</div>
</div>
`;

exports[`set show-index prop to false 1`] = `
<div class="van-image-preview" name="van-fade">
  <div class="van-swipe van-image-preview__swipe">
    <div class="van-swipe__track" style="width: 0px; transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
</div>
`;

exports[`zoom in and drag image to move 1`] = `
<div class="van-image van-image-preview__image" style="transition-duration: 0s; transform: scale(2, 2) translate(0px, 0px);"><img src="https://img.yzcdn.cn/1.png" class="van-image__img" style="object-fit: contain;">
  <div class="van-image__loading">
    <div class="van-loading van-loading--spinner"><span class="van-loading__spinner van-loading__spinner--spinner"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></span></div>
  </div>
</div>
`;

exports[`zoom in and drag image to move 2`] = `<div class="van-image van-image-preview__image" style="transition-duration: 0s; transform: scale(2, 2) translate(25px, 25px);"><img src="https://img.yzcdn.cn/1.png" class="van-image__img" style="object-fit: contain;"></div>`;
